--- a/css/view.css
+++ b/css/view.css
@@ -95,6 +95,7 @@ body {
   padding: 10px;
 }
 .modal-content {
+  animation: 0.25s ease appearModal;
   position: relative;
   display: flex;
   height: 35px;
@@ -125,7 +126,6 @@ body {
 .modal-show {
   display: flex;
   justify-content: center;
-  transition: 0.2s;
 }
 
 .stop-scrolling {
@@ -217,6 +217,7 @@ body {
   display: flex;
   width: 420px;
   max-height: 700px;
+  animation: 0.25s ease appearModal;
 }
 .more-detail-card {
   display: flex;
@@ -245,4 +246,17 @@ body {
 }
 .more-detail-trailer:hover {
   color: rgb(135, 17, 17);
+}
+
+@keyframes appearModal {
+  0% {
+    opacity: 0;
+    transform: translate(0, -100%) scale(1);
+  }
+  50% {
+    opacity: 50%;
+  }
+  100% {
+    opacity: 100%;
+  }
 }/*# sourceMappingURL=view.css.map */
